src/index.css
/* ... */
.plain-tabs.nav-tabs .nav-item.show .nav-link, .plain-tabs.nav-tabs .nav-link.active {
  background-color: transparent;
  color: inherit;
  border-bottom-color: red !important;
}

.plain-tabs .tab-content {
  padding-left: 10px;
  padding-right: 10px;
}

.jackpot-tabs .nav-item {
  width: 50%;
}
.jackpot-tabs button {
  width: 100%;
}

li.bet-option {
  border-bottom: 1px dashed #e5e7eb;
  padding-top: 4px;
  padding-bottom: 8px;
}

.highlights-board {
  /* border-top: 10px solid #dddddd; */
  /* border-bottom: 10px  solid #dddddd; */
  /* box-shadow: 0px 2px 6px rgba(0,0,0,0.6); */
  z-index: 999999;
  margin-bottom: 10px;
  margin-top: 0;
  background: #f9f9f9;
  border-bottom: 1px solid #f2f2f2;
  padding: 8px 10px;
}
.highlights .marquee-card {
  text-align: left;
  vertical-align: top;
  color: #222222;
  background-color: rgba(255,255,255,0.9);
  background-size: cover;
  border: 0;
  border-radius: .25rem;
  /* width: 98%; */
  height: 8.75em;
  /* margin-right: 8px; */
  padding: .5em .2em .6em;
  font-weight: 400;
  display: inline-block;
  box-shadow: 0 0px 0px 1px rgba(0,0,0,.1);
  margin-top: 0!important;
}

.marquee-card .market-type {
  margin-bottom: 5px;
  /* margin-left: 1em; */
  /* margin-right: 1em; */
  font-size: 12px;
  display: flex;
}

.marquee-card .market-type .line-span {
  border-bottom: 1px solid rgba(0,0,0,.3);
  flex: 1 1;
  margin-bottom: 6px;
}

.marquee-card .market-type .market-name-span {
  white-space: nowrap;
  text-overflow: ellipsis;
  color: #adadad;
  max-width: 93.59%;
  padding: 0 8px;
  overflow: hidden;
}

.marquee-card .card-option-group {
  height: 32px;
  margin-top: 1px;
  margin-bottom: 0;
  display: flex;
}


.marquee-card .btn-count-3 .ng-star-inserted{
  width: 33.3%;
}

.ng-star-inserted .option-indicator {
  display: flex;
  background: rgba(0,0,0, 0.04);
  border: 1px solid #eeeeee;
  width: 90%;
  padding: 3px 5px;
}

.marquee-card .card-result-name-text-alt {
  color: #777777;
  font-size: 11px;
}
.marquee-card .main {
  height: 2.5em;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 500;
  font-size: 14px;
  color: #555;
  text-transform: capitalize;
}

.marquee-card .image-main {
  height: 60px;
}

img.highlights-content-img {
  height: 60px;
}

.btn-count-2 .ng-star-inserted {
  width: 50%;
}

.popular-game {
  width: 20%;
  display: inline-block;
  /* margin-right: 8px; */
  padding-right: 10px;
}
.popular-games:last-child {
  padding-right: 0;
}

.highlights-board .popular-game img {
  width: 100%;
}

.highlights-board-panel {
  height: 100px;
  background: #ffffff;
}

.highlight-color {
  color: rgba(231, 6, 84, 0.958);
}

.blink-me {
  animation: blinker 1s linear infinite;
}

@keyframes blinker {
  50% {
    opacity: 0;
  }
}

.banner-imgs img {
  height: 150px;
}

.menu-icon {
  width: 5rem;
  margin: auto;
  /* height: 5rem; */
}
.menu-icon img {
  width: 100%;
  border-radius: 3px;
  height: 40px;
  width: 40px;
  margin: auto;
}
.menu-item .menu-name {
  /* margin-top: 4px; */
  font-size: 12px;
  font-weight: 400;
}

.offcanvas-body {
  flex-grow: 1;
  padding: 0;
  overflow-y: auto;
}

.header-account .bx-1 {
  /* font-size: .75rem; */
  line-height: 1.5;
  font-weight: 500;
  opacity: .7;
}

.header-account .bx-2 {
  /* font-size: 1.125rem; */
  line-height: 1.5;
  font-weight: 500;
  margin: 5px 0;
}
.header-account .bx-3 {
  margin-top: 1rem;
  display: flex;
  opacity: .8;
}
.offcanvas-header {
  display: flex;
  align-items: center;
  padding: 15px 10px;
}

.offcanvas-title {
  margin-bottom: 0;
  font-size: 14px;
  line-height: var(--bs-offcanvas-title-line-height);
  font-weight: 500;
  color: rgb(90 102 120);
  opacity: 0.8;
}

.header-account .cd a:hover, .header-account .cd div:hover, .header-account .cd-l:hover {
  --tw-bg-opacity: 1;
  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
}

.header .onboard .e {
  background-color: rgba(255,255,255,.1);
  border-color: rgba(255,255,255,0.4) !important;
  background-color: rgba(255,255,255,.21);
  color: #fff;
  flex-shrink: 1;
  border-width: 1px;
  border-color: rgb(255 255 255 0.3);
  --tw-border-opacity: .3;
  text-align: center;
  font-weight: 500;
  padding: 6px 20px;
}

.header .onboard .e {
  background-color: rgba(255,255,255,.21);
  color: #fff;
  flex-shrink: 1;
  border-width: 1px;
  border-color: rgb(255 255 255 0.3);
  --tw-border-opacity: .3;
  text-align: center;
  font-weight: 500;
}

.header .desktop .onboard a, .header .desktop .onboard button {
  white-space: nowrap;
  border-radius: .375rem;
  --tw-bg-opacity: 1;
  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
  padding: .375rem 1rem;
  font-weight: 500;
  --tw-text-opacity: 1;
  color: rgb(255 255 255 / var(--tw-text-opacity));
}

.purple-bg {
  background: #8d2585 !important;
  color: #dddddd !important;
}

.in-blue-highlight {
  /* background: blue; */
}
.std-boxed-form-page {
  max-width: 500px;
  margin: 40px auto 0 !important;
  /* text-align: center; */
  /* box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 1px 0px; */
  /* border: 1px solid #f5f5f5; */
  /* background: #fdfdfd; */
}

h1.std-title {
  font-size: 24px;
  font-weight: 500;
  color: #666666;
}

.form-block .disclaimer {
  display: block;
  text-align: center;
  font-size: 12px;
  line-height: 1.5;
  --tw-text-opacity: 1;
  color: rgb(163 163 163 / 70);
}

.btn-default {
  background: #dddddd;
}

.popover-login-modal .modal-header {
  background: #fbfbfb;
  box-shadow: 0 0 5px -1px rgba(0,0,0,.43);
  -webkit-box-shadow: 0 0 5px -1px rgba(0,0,0,.43);
  border-bottom: 1px solid rgba(255,255,255, 0.7);
}

.std-carousel-image {
  max-height: 120px;
  width: 100%;
}

.is-jackpot-matches .top-matches {
  padding-right: 0;

}

.is-jackpot .c-btn-group > .c-btn {
  
  width: 80px !important;
}

